<resources>
    <string name="app_name">Google Maps API Test - Android</string>
    <string name="my_location">My location</string>
    <string name="apartment">My apartment in Viçosa - MG</string>
    <string name="pf_house">My house in Porto Firme - MG</string>
    <string name="department">Department of Informatics - UFV</string>
    <string name="close_app">Close application</string>

    <string name="porto_firme">Porto Firme - MG</string>
    <string name="vicosa">Viçosa - MG</string>
    <string name="dpi">DPI - UFV</string>

    <string name="allow_gps">Please allow the application to use GPS!</string>
    <string name="getting_gps">Getting the GPS signal… try again in a few moments.</string>
    <string name="distance_ap">Distance to apartment:</string>

    <string name="title_activity_maps">Map</string>
</resources>