<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_alignEnd="@id/bt_department"
        android:layout_alignStart="@id/bt_department"
        android:layout_centerHorizontal="true"
        android:text="@string/apartment"
        android:id="@+id/bt_apartment"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignEnd="@id/bt_department"
        android:layout_alignStart="@id/bt_department"
        android:layout_centerHorizontal="true"
        android:text="@string/pf_house"
        android:id="@+id/bt_pf"
        android:layout_below="@id/bt_apartment"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/department"
        android:id="@+id/bt_department"
        android:layout_below="@id/bt_pf"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignEnd="@id/bt_department"
        android:layout_alignStart="@id/bt_department"
        android:layout_centerHorizontal="true"
        android:text="@string/close_app"
        android:id="@+id/bt_close"
        android:layout_below="@id/bt_department"/>

</RelativeLayout>