<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <Button
        android:id="@+id/bt_portoFirme"
        android:text="@string/porto_firme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:onClick="onClick_PF"
        />
    <Button
        android:id="@+id/bt_vicosa"
        android:text="@string/vicosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/bt_portoFirme"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:onClick="onClick_Vicosa"
        />
    <Button
        android:id="@+id/bt_dpi"
        android:text="@string/dpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/bt_vicosa"
        android:layout_marginEnd="7dp"
        android:onClick="onClick_DPI"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@id/bt_dpi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        />

    <RadioButton
        android:id="@+id/bt_myLocalization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:text="Minha localização"
        android:buttonTint="#FF00AAAA"
        android:onClick="onClick_myLocalization"/>
</RelativeLayout>